# Alchemy

./: .cursorrules  CLAUDE.md  CastSpell.c  Dockerfile  WoodChopper.c  alchemyData.json  alchemyData.py  alchemyData2.json  app.py  download_resources.py  effect.py  effects.csv  effects.yaml  fixlinks.py  get_ingredient_images.py  ingredient.py  ingredients.csv  ingredients.txt  ingredients.yaml  madlibs.py  madlibs.yaml  make.cmd  parseNew.py  potion.py  push.cmd  pyproject.toml  readme.md  readme.txt  requirements.txt  scrape_thumbnails.py  skyrimPotions.json  skyrimPotions.py  table.py  tasks.py  test_effect.py  test_ingredient.py  test_potion.py
.github/: copilot-instructions.md
public/css/: styles.css
static/: style.css
static/css/: madlibs.css  skyrim.css
templates/: about.html  effect.html  effects.html  index.html  ingredient.html  ingredients.html  madlib.html  madlibs.html  potions.html  skyrim.html
